refactor: code cleanup and changed background to gradient

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -2,7 +2,7 @@
     (closeEmulatorEvent)="closeEmulator()"></app-game-emulator>
 
 <div class="content-container" [ngClass]="{'emulator-active': displayEmulator}">
-    <div id="intro">
+    <div ngsReveal id="intro">
         <div id="author">
             {{ environment.author }}
         </div>
