--- a/src/app/shared/styles/_variables.scss
+++ b/src/app/shared/styles/_variables.scss
@@ -1,5 +1,8 @@
 ///// Colors /////
-$background: #121212;
+$background: #1e2425;
+$background-secondary: #000000;
+
+$background-translucent: #0e1114f5;
 
 $primary-100: #b1e2da;
 $primary-300: #6fb9ad;
@@ -18,3 +21,6 @@ $neutral-900: #171717;
 
 $neutral-100-translucent: #dadada05;
 $neutral-600-transulcent: #5b5b5b91;
+
+///// Fonts /////
+$primary-font: Exo2;
