--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,18 @@
+@import "src/app/shared/styles/variables";
+
+#background {
+    position: fixed;
+    min-height: 100%;
+    width: 100%;
+    background-image: linear-gradient($background, $background-secondary);
+}
+
+#particles-js {
+    position: fixed;
+    height: 100vh;
+    filter: blur(1px);
+}
+
 #shader-layer {
     position: fixed;
     height: 100%;
@@ -12,9 +27,4 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-}
-
-#particles-js {
-    position: fixed;
-    height: 100vh;
 }
