--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,5 +1,5 @@
 <div class="content-container">
-    <div id="placeholder">
+    <div ngsReveal class="title">
         Coming soon
     </div>
 </div>
