--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,9 @@
 <div id="particles-js"></div>
 <div id="shader-layer"></div>
 
+<app-splash-screen *ngIf="eventService.splashScreenActive"
+    (animationEndEvent)="splashScreenAnimationEnd()"></app-splash-screen>
+
 <div id="container">
     <!-- MOBILE -->
     <app-nav *appIfScreenSize="'small'">
