--- a/src/app/shared/styles/_variables.scss
+++ b/src/app/shared/styles/_variables.scss
@@ -8,7 +8,7 @@ $primary-100: #b1e2da;
 $primary-300: #6fb9ad;
 $primary-400: #95bba2;
 $primary-600: #6a948d;
-$primary-900: #0f100f;
+$primary-900: #161817;
 
 $primary-600-translucent: #6a948d4d;
 $primary-900-translucent: #0f100ff0;
