style(effects): updated styling, splash screen and particle effects

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -16,7 +16,7 @@
         <p [innerText]="about"></p>
     </div>
 
-    <div ngsReveal id="skills" class="section">
+    <div ngsReveal class="section">
         <h1>Skills </h1>
         <p [innerText]="skillsDescription"></p>
 
