--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,5 +1,5 @@
 <div class="content-container">
-    <div ngsReveal class="title">
-        Coming soon
+    <div ngsReveal class="main-section">
+        <div class="title">Coming soon</div>
     </div>
 </div>
