--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,5 +1,5 @@
 <div class="content-container">
-    <div ngsReveal id="contact">
+    <div ngsReveal class="main-section">
         <div class="title">Contact</div>
         <p [innerText]="contactIntro"></p>
 
