--- a/src/app/core/components/splash-screen/splash-screen.component.html
+++ b/src/app/core/components/splash-screen/splash-screen.component.html
@@ -1,6 +1,6 @@
 <div id="splash-screen-container">
     <object type="image/svg+xml" data="assets/svgs/brand-logo-animated.svg" id="logo"></object>
 
-    <div id="top-half" (animationstart)="eventService.splashScreenAnimationStarted = true" (animationend)="animationEnd()"></div>
+    <div id="top-half" (animationstart)="stateService.setSplashScreenAnimationFinishedState()" (animationend)="animationEnd()"></div>
     <div id="bottom-half"></div>
 </div>
